feat: implement comprehensive environment configuration and type safety system
- Add Zod schemas for environment variable validation with type safety
- Create configuration management system with singleton pattern
- Implement environment-specific configurations (dev, staging, prod)
- Add startup validation with detailed error messages and warnings
- Create utility functions for easy configuration access
- Add comprehensive test suite for configuration validation
- Include environment template files for easy setup
- Support feature flags and service-specific configuration getters
- Validate security requirements (JWT secrets, encryption keys)
- Add detailed documentation and troubleshooting guide

Addresses task 2: Environment Configuration and Type Safety
- ✅ Zod schemas for environment validation
- ✅ Type-safe configuration management system
- ✅ Environment-specific utility functions
- ✅ Application startup validation
- ✅ Development, staging, and production configurations

--- a/.gitignore
+++ b/.gitignore
@@ -63,3 +63,8 @@ temp/
 # Cache
 .cache/
 .parcel-cache/
+.gcp
+.gcp/service-account.json
+.gcp/firebase-adminsdk-fbsvc-cc86734eaf.json
+.env.staging
+.env.development
