--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "prepare": "husky install"
   },
   "dependencies": {
-    "@clerk/nextjs": "^6.0.0",
+    "@clerk/nextjs": "^6.31.3",
     "@google-cloud/storage": "^7.0.0",
     "@radix-ui/react-slot": "^1.2.3",
     "@tanstack/react-query": "^5.0.0",
@@ -26,11 +26,13 @@
     "framer-motion": "^11.0.0",
     "hls.js": "^1.4.0",
     "lucide-react": "^0.400.0",
-    "next": "15.0.1",
+    "next": "15.5.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "stripe": "^14.0.0",
+    "svix": "^1.74.1",
     "tailwind-merge": "^2.0.0",
+    "undici": "^7.14.0",
     "zod": "^3.22.0",
     "zustand": "^4.4.0"
   },
@@ -47,7 +49,7 @@
     "@typescript-eslint/eslint-plugin": "^6.0.0",
     "@typescript-eslint/parser": "^6.0.0",
     "eslint": "^8.0.0",
-    "eslint-config-next": "15.0.1",
+    "eslint-config-next": "15.5.0",
     "husky": "^8.0.0",
     "jest": "^29.0.0",
     "jest-environment-jsdom": "^29.0.0",
@@ -58,7 +60,7 @@
     "typescript": "^5.0.0"
   },
   "engines": {
-    "node": ">=18.0.0",
+    "node": ">=22.0.0",
     "pnpm": ">=8.0.0"
   },
   "packageManager": "pnpm@8.15.0"
