feat: complete Clerk authentication setup with sign-in and sign-up pages
- Create dedicated sign-in page at /sign-in with Clerk's SignIn component
- Create dedicated sign-up page at /sign-up with Clerk's SignUp component
- Use Next.js optional catch-all routes [[...sign-in]] and [[...sign-up]]
- Apply StreamVault branding with gradient backgrounds and glass morphism
- Configure custom Clerk appearance with dark theme styling
- Maintain existing middleware configuration for route protection
- All Clerk environment variables properly configured
- Authentication flow now complete with OAuth providers support

Task 3.1 completed: Install and configure Clerk SDK
- ✅ @clerk/nextjs installed and configured
- ✅ ClerkProvider setup in layout.tsx
- ✅ Middleware configured for route protection
- ✅ Sign-in and sign-up pages created
- ✅ Environment variables configured
- ✅ OAuth providers ready (Google, GitHub, Discord)
- ✅ Basic authentication flow tested

--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -1,2 +1,9 @@
 packages:
-  - '.'
+  - .
+
+onlyBuiltDependencies:
+  - '@clerk/shared'
+  - '@tailwindcss/oxide'
+  - protobufjs
+  - sharp
+  - unrs-resolver
