--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "framer-motion": "^11.0.0",
     "hls.js": "^1.4.0",
     "lucide-react": "^0.400.0",
-    "next": "15.0.1",
+    "next": "15.5.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "stripe": "^14.0.0",
@@ -39,6 +39,7 @@
     "@commitlint/config-conventional": "^18.0.0",
     "@eslint/eslintrc": "^3.3.1",
     "@playwright/test": "^1.40.0",
+    "@tailwindcss/postcss": "^4.0.0",
     "@testing-library/jest-dom": "^6.0.0",
     "@testing-library/react": "^14.0.0",
     "@types/jest": "^30.0.0",
@@ -48,7 +49,7 @@
     "@typescript-eslint/eslint-plugin": "^6.0.0",
     "@typescript-eslint/parser": "^6.0.0",
     "eslint": "^8.0.0",
-    "eslint-config-next": "15.0.1",
+    "eslint-config-next": "15.5.0",
     "husky": "^8.0.0",
     "jest": "^29.0.0",
     "jest-environment-jsdom": "^29.0.0",
@@ -59,8 +60,8 @@
     "typescript": "^5.0.0"
   },
   "engines": {
-    "node": ">=18.0.0",
-    "pnpm": ">=8.0.0"
+    "node": ">=22.0.0",
+    "pnpm": ">=10.15.0"
   },
-  "packageManager": "pnpm@8.15.0"
+  "packageManager": "pnpm@10.15.0"
 }
