--- a/.env.build
+++ b/.env.build
@@ -1,69 +1,33 @@
-# Minimal environment configuration for CI/CD builds
-# This file is used when required environment variables are not available
+# Build Environment Variables
+# This file is used during CI/CD builds
 
-# Core
-NEXT_PUBLIC_APP_URL=http://localhost:3000
-GCP_PROJECT_ID=test-project
-GCS_BUCKET_NAME=test-bucket
+# Next.js Configuration
+NEXT_PUBLIC_APP_URL=https://streamvault.app
+NEXT_PUBLIC_APP_NAME=StreamVault
+NEXT_PUBLIC_APP_VERSION=0.1.0
 
-# Google Cloud
-GOOGLE_APPLICATION_CREDENTIALS=/dev/null
-GCS_SERVICE_ACCOUNT_EMAIL=test@test.com
-
-# Authentication
+# Clerk Authentication (Public Keys Only)
 NEXT_PUBLIC_CLERK_PUBLISHABLE_KEY=pk_test_placeholder
-CLERK_SECRET_KEY=sk_test_placeholder
+NEXT_PUBLIC_CLERK_SIGN_IN_URL=/sign-in
+NEXT_PUBLIC_CLERK_SIGN_UP_URL=/sign-up
+NEXT_PUBLIC_CLERK_AFTER_SIGN_IN_URL=/dashboard
+NEXT_PUBLIC_CLERK_AFTER_SIGN_UP_URL=/dashboard
 
-# Firebase
-FIREBASE_PROJECT_ID=test-project
-FIREBASE_PRIVATE_KEY=test-private-key
-FIREBASE_CLIENT_EMAIL=test@test.com
-NEXT_PUBLIC_FIREBASE_API_KEY=test-api-key
-NEXT_PUBLIC_FIREBASE_AUTH_DOMAIN=test.firebaseapp.com
-NEXT_PUBLIC_FIREBASE_PROJECT_ID=test-project
-NEXT_PUBLIC_FIREBASE_STORAGE_BUCKET=test.appspot.com
-NEXT_PUBLIC_FIREBASE_MESSAGING_SENDER_ID=123456789
-NEXT_PUBLIC_FIREBASE_APP_ID=1:123456789:web:abcdef
+# Firebase Configuration (Public Config)
+NEXT_PUBLIC_FIREBASE_API_KEY=placeholder
+NEXT_PUBLIC_FIREBASE_AUTH_DOMAIN=streamvault.firebaseapp.com
+NEXT_PUBLIC_FIREBASE_PROJECT_ID=streamvault
+NEXT_PUBLIC_FIREBASE_STORAGE_BUCKET=streamvault.appspot.com
+NEXT_PUBLIC_FIREBASE_MESSAGING_SENDER_ID=placeholder
+NEXT_PUBLIC_FIREBASE_APP_ID=placeholder
 
-# Stripe
-STRIPE_SECRET_KEY=sk_test_placeholder
+# Google Cloud Platform
+GCP_PROJECT_ID=streamvault
+GCS_BUCKET_NAME=streamvault-videos
+
+# Stripe (Public Keys Only)
 NEXT_PUBLIC_STRIPE_PUBLISHABLE_KEY=pk_test_placeholder
-STRIPE_WEBHOOK_SECRET=whsec_placeholder
-STRIPE_BASIC_PRICE_ID=price_placeholder
-STRIPE_PREMIUM_PRICE_ID=price_placeholder
-STRIPE_PRO_PRICE_ID=price_placeholder
 
-# Streaming
-STREAMING_DOMAIN=localhost
-RTMP_INGEST_URL=rtmp://localhost/live
-HLS_DELIVERY_URL=https://localhost/hls
-CDN_BASE_URL=https://localhost
-
-# Security
-JWT_SECRET=abcdefghijklmnopqrstuvwxyz123456
-ENCRYPTION_KEY=abcdefghijklmnopqrstuvwxyz123456
-WEBHOOK_SECRET=test-webhook-secret-placeholder
-
-# Infrastructure (optional for builds)
-CLOUDFLARE_API_TOKEN=placeholder
-CLOUDFLARE_ZONE_ID=placeholder
-CLOUDFLARE_ACCOUNT_ID=placeholder
-DATABASE_URL=postgresql://test:test@localhost:5432/test
-REDIS_URL=redis://localhost:6379
-SENTRY_DSN=https://placeholder@sentry.io/123456
-ANALYTICS_ID=G-PLACEHOLDER
-
-# Feature flags
-ENABLE_AI_FEATURES=false
-ENABLE_WHITE_LABEL=false
-ENABLE_ANALYTICS=false
-ENABLE_PWA=false
-ENABLE_OFFLINE_DOWNLOADS=false
-
-# Development settings
-NEXT_PUBLIC_DEBUG_MODE=false
-LOG_LEVEL=error
-MAX_FILE_SIZE=104857600
-THUMBNAIL_SIZES=150x150,300x300,600x600
-RATE_LIMIT_WINDOW_MS=60000
-RATE_LIMIT_MAX_REQUESTS=100
+# Build Configuration
+NODE_ENV=production
+ANALYZE=false
