--- a/package.json
+++ b/package.json
@@ -7,13 +7,21 @@
     "build": "next build",
     "start": "next start",
     "lint": "eslint . --ext .js,.jsx,.ts,.tsx --fix",
+    "lint:check": "eslint . --ext .js,.jsx,.ts,.tsx",
     "format": "prettier --write .",
+    "format:check": "prettier --check .",
     "type-check": "tsc --noEmit",
     "test": "jest",
     "test:watch": "jest --watch",
     "test:coverage": "jest --coverage",
     "test:e2e": "playwright test",
-    "prepare": "husky install"
+    "prepare": "husky install",
+    "firebase:setup": "node scripts/setup-firebase.js",
+    "firebase:test": "curl -X GET http://localhost:3000/api/firebase/config",
+    "firebase:deploy": "firebase deploy",
+    "firebase:rules": "firebase deploy --only firestore:rules",
+    "firebase:indexes": "firebase deploy --only firestore:indexes",
+    "firebase:emulator": "firebase emulators:start"
   },
   "dependencies": {
     "@clerk/nextjs": "^6.0.0",
@@ -28,6 +36,7 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
     "firebase": "^10.0.0",
+    "firebase-admin": "^13.4.0",
     "framer-motion": "^11.0.0",
     "hls.js": "^1.4.0",
     "lucide-react": "^0.400.0",
