ci: add debugging output to CI linting step
Add debugging information to understand why ESLint can't find configuration files in CI environment.

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -38,7 +38,15 @@ jobs:
         run: pnpm type-check
 
       - name: 'Linting'
-        run: pnpm lint
+        run: |
+          echo "Current working directory:"
+          pwd
+          echo "Files in current directory:"
+          ls -la
+          echo "Looking for .eslintrc.json:"
+          find . -name ".eslintrc.json" -type f
+          echo "Running ESLint:"
+          pnpm lint
 
       - name: 'Code formatting check'
         run: pnpm format:check
