--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -22,8 +22,10 @@
     "@next/next/no-page-custom-font": "off",
     "@next/next/no-img-element": "warn",
     "react-hooks/exhaustive-deps": "warn",
-    "@typescript-eslint/no-unused-vars": "error",
+    "@typescript-eslint/no-unused-vars": "warn",
     "@typescript-eslint/no-explicit-any": "warn",
+    "@typescript-eslint/no-var-requires": "off",
+    "@typescript-eslint/triple-slash-reference": "off",
     "react/react-in-jsx-scope": "off"
   },
   "settings": {
