fix: update copilot-autofix workflow to use pnpm properly
- Change Node.js version from 20 to 22 to match project requirements
- Update pnpm version from 8 to 10.15.0 for consistency
- Replace npm cache with pnpm cache configuration
- Add proper cache-dependency-path for pnpm-lock.yaml
- Change from --no-frozen-lockfile to --frozen-lockfile for CI stability
- Fix all job configurations to use consistent pnpm setup

--- a/.github/workflows/copilot-autofix.yml
+++ b/.github/workflows/copilot-autofix.yml
@@ -26,19 +26,20 @@ jobs:
         with:
           fetch-depth: 0
 
-      - name: 'Setup Node.js'
-        uses: actions/setup-node@v4
-        with:
-          node-version: '20'
-          cache: 'npm'
-
       - name: 'Install pnpm'
         uses: pnpm/action-setup@v4
         with:
-          version: '8'
+          version: '10.15.0'
+
+      - name: 'Setup Node.js'
+        uses: actions/setup-node@v4
+        with:
+          node-version: '22'
+          cache: 'pnpm'
+          cache-dependency-path: 'pnpm-lock.yaml'
 
       - name: 'Install dependencies'
-        run: pnpm install --no-frozen-lockfile
+        run: pnpm install --frozen-lockfile
 
       - name: 'Get changed files'
         id: changed-files
@@ -193,19 +194,20 @@ jobs:
           token: ${{ secrets.GITHUB_TOKEN }}
           fetch-depth: 0
 
-      - name: 'Setup Node.js'
-        uses: actions/setup-node@v4
-        with:
-          node-version: '20'
-          cache: 'npm'
-
       - name: 'Install pnpm'
         uses: pnpm/action-setup@v4
         with:
-          version: '8'
+          version: '10.15.0'
+
+      - name: 'Setup Node.js'
+        uses: actions/setup-node@v4
+        with:
+          node-version: '22'
+          cache: 'pnpm'
+          cache-dependency-path: 'pnpm-lock.yaml'
 
       - name: 'Install dependencies'
-        run: pnpm install --no-frozen-lockfile
+        run: pnpm install --frozen-lockfile
 
       - name: 'Check for dependency vulnerabilities'
         id: audit
@@ -291,19 +293,20 @@ jobs:
           token: ${{ secrets.GITHUB_TOKEN }}
           fetch-depth: 0
 
-      - name: 'Setup Node.js'
-        uses: actions/setup-node@v4
-        with:
-          node-version: '20'
-          cache: 'npm'
-
       - name: 'Install pnpm'
         uses: pnpm/action-setup@v4
         with:
-          version: '8'
+          version: '10.15.0'
+
+      - name: 'Setup Node.js'
+        uses: actions/setup-node@v4
+        with:
+          node-version: '22'
+          cache: 'pnpm'
+          cache-dependency-path: 'pnpm-lock.yaml'
 
       - name: 'Install dependencies'
-        run: pnpm install --no-frozen-lockfile
+        run: pnpm install --frozen-lockfile
 
       - name: 'Check code style'
         id: style-check
@@ -381,7 +384,7 @@ jobs:
 
           # Streaming performance
           echo "### 📹 StreamVault Performance Tips:" >> performance_analysis.md
-          echo "- Use `next/image` for optimized image delivery" >> performance_analysis.md
+          echo "- Use \`next/image\` for optimized image delivery" >> performance_analysis.md
           echo "- Implement proper video preloading strategies" >> performance_analysis.md
           echo "- Consider CDN caching for static assets" >> performance_analysis.md
           echo "- Use React.memo for expensive rendering operations" >> performance_analysis.md
