feat: add comprehensive streaming infrastructure and storage services
- Implement HLS streaming service with transcoding
- Add Google Cloud Storage integration with signed URLs
- Create secure VOD player with content protection
- Add comprehensive API endpoints for streaming and storage
- Include test suites and integration tests
- Update project configuration and dependencies
- Fix TypeScript errors and linting issues

--- a/.env.example
+++ b/.env.example
@@ -38,9 +38,11 @@ STRIPE_PRO_PRICE_ID=price_...
 
 # Streaming Infrastructure
 STREAMING_DOMAIN=stream.streamvault.app
-RTMP_INGEST_URL=rtmp://ingest.streamvault.app/live
-HLS_DELIVERY_URL=https://cdn.streamvault.app/hls
-CDN_BASE_URL=https://cdn.streamvault.app
+NEXT_PUBLIC_RTMP_ENDPOINT=rtmp://ingest.streamvault.app/live
+NEXT_PUBLIC_HLS_ENDPOINT=https://cdn.streamvault.app/hls
+NEXT_PUBLIC_CDN_ENDPOINT=https://cdn.streamvault.app
+HLS_STORAGE_PATH=/tmp/hls
+STREAMING_WEBHOOK_SECRET=your-streaming-webhook-secret
 
 # Cloudflare Configuration
 CLOUDFLARE_API_TOKEN=...
