--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,5 +1,12 @@
 name: 'CI Pipeline'
 
+# Add permissions at the workflow level
+permissions:
+  contents: read
+  actions: read
+  checks: write
+  security-events: write
+
 on:
   push:
     branches: [main, staging, develop]
@@ -15,6 +22,8 @@ jobs:
   code-quality:
     name: 'Code Quality'
     runs-on: ubuntu-latest
+    permissions:
+      contents: read
 
     steps:
       - name: 'Checkout repository'
@@ -52,6 +61,8 @@ jobs:
     name: 'Unit Tests'
     runs-on: ubuntu-latest
     needs: code-quality
+    permissions:
+      contents: read
 
     steps:
       - name: 'Checkout repository'
@@ -104,6 +115,8 @@ jobs:
     name: 'Build Validation'
     runs-on: ubuntu-latest
     needs: code-quality
+    permissions:
+      contents: read
 
     steps:
       - name: 'Checkout repository'
@@ -143,6 +156,8 @@ jobs:
     name: 'E2E Tests'
     runs-on: ubuntu-latest
     needs: [unit-tests, build]
+    permissions:
+      contents: read
 
     steps:
       - name: 'Checkout repository'
@@ -229,6 +244,8 @@ jobs:
     runs-on: ubuntu-latest
     needs: build
     if: github.event_name == 'pull_request'
+    permissions:
+      contents: read
 
     steps:
       - name: 'Checkout repository'
@@ -281,6 +298,8 @@ jobs:
     runs-on: ubuntu-latest
     needs: [unit-tests, e2e-tests, security, build]
     if: github.ref == 'refs/heads/main' || github.ref == 'refs/heads/staging'
+    permissions:
+      contents: read
 
     steps:
       - name: 'Checkout repository'
