--- a/.gitignore
+++ b/.gitignore
@@ -68,6 +68,7 @@ temp/
 .parcel-cache/
 .gcp
 .gcp/service-account.json
+.gcp/firebase-web-config.md
 .gcp/firebase-adminsdk-fbsvc-cc86734eaf.json
 .env.staging
 .env.development
