--- a/tsconfig.json
+++ b/tsconfig.json
@@ -23,7 +23,7 @@
     },
     "target": "ES2017"
   },
-  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts"],
+  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts", "eslint.config.js"],
   "exclude": [
     "node_modules",
     "tests/**/*",
