feat: save current progress on develop branch before merging feature branch

--- a/.env.example
+++ b/.env.example
@@ -63,6 +63,55 @@ JWT_SECRET=your-super-secret-jwt-key
 ENCRYPTION_KEY=your-32-character-encryption-key
 WEBHOOK_SECRET=your-webhook-secret-key
 
+# Redis Configuration for Rate Limiting
+UPSTASH_REDIS_REST_URL=https://...
+UPSTASH_REDIS_REST_TOKEN=...
+
+# Security Features
+ENABLE_RATE_LIMITING=true
+ENABLE_DDOS_PROTECTION=true
+ENABLE_INPUT_VALIDATION=true
+ENABLE_AUDIT_LOGGING=true
+ENABLE_SECURITY_HEADERS=true
+ENABLE_CONTENT_MODERATION=true
+
+# Security Thresholds
+MAX_LOGIN_ATTEMPTS=5
+RATE_LIMIT_WINDOW_MS=900000
+API_RATE_LIMIT=1000
+AUTH_RATE_LIMIT=10
+CHAT_RATE_LIMIT=60
+UPLOAD_RATE_LIMIT=10
+STREAM_RATE_LIMIT=5
+
+# Content Moderation
+MAX_MESSAGE_LENGTH=500
+MAX_REPEATED_CHARACTERS=3
+PROFANITY_FILTER_ENABLED=true
+SPAM_DETECTION_ENABLED=true
+TOXICITY_DETECTION_ENABLED=true
+PERSONAL_INFO_DETECTION_ENABLED=true
+LINK_FILTERING_ENABLED=true
+
+# Allowed Domains for Link Filtering
+ALLOWED_DOMAINS=youtube.com,twitch.tv,twitter.com,instagram.com,github.com
+
+# Blocked IPs (comma-separated)
+BLOCKED_IPS=
+
+# Trusted Proxies (comma-separated)
+TRUSTED_PROXIES=127.0.0.1,::1
+
+# Audit Trail Configuration
+AUDIT_RETENTION_DAYS=2555
+SECURITY_LOG_RETENTION_DAYS=2555
+GENERAL_LOG_RETENTION_DAYS=1095
+
+# Security Monitoring
+SECURITY_ALERT_WEBHOOK_URL=
+CRITICAL_ALERT_EMAIL=security@streamvault.app
+SECURITY_TEAM_SLACK_WEBHOOK=
+
 # Feature Flags
 ENABLE_AI_FEATURES=true
 ENABLE_WHITE_LABEL=true
