--- a/package.json
+++ b/package.json
@@ -2,12 +2,13 @@
   "name": "streamvault",
   "version": "0.1.0",
   "private": true,
+  "type": "module",
   "scripts": {
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "pnpm exec eslint . --ext .js,.jsx,.ts,.tsx --fix",
-    "lint:check": "pnpm exec eslint . --ext .js,.jsx,.ts,.tsx",
+    "lint": "pnpm exec eslint . --fix",
+    "lint:check": "pnpm exec eslint .",
     "format": "pnpm exec prettier --write .",
     "format:check": "pnpm exec prettier --check .",
     "type-check": "pnpm exec tsc --noEmit",
@@ -39,6 +40,7 @@
     "@radix-ui/react-tabs": "^1.1.13",
     "@tanstack/react-query": "^5.0.0",
     "@types/uuid": "^10.0.0",
+    "@upstash/redis": "^1.34.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
     "firebase": "^10.14.1",
@@ -72,6 +74,7 @@
     "@typescript-eslint/parser": "^6.21.0",
     "eslint": "^8.57.1",
     "eslint-config-next": "15.5.0",
+    "eslint-plugin-jest": "^29.0.1",
     "eslint-plugin-react": "^7.37.5",
     "eslint-plugin-react-hooks": "^5.2.0",
     "husky": "^8.0.0",
@@ -82,7 +85,8 @@
     "prettier-plugin-tailwindcss": "^0.5.0",
     "tailwindcss": "^4.0.0",
     "tailwindcss-animate": "^1.0.7",
-    "typescript": "^5.3.3"
+    "typescript": "^5.3.3",
+    "typescript-eslint": "^8.40.0"
   },
   "engines": {
     "node": ">=22.0.0",
@@ -103,7 +107,9 @@
   },
   "lint-staged": {
     "*.{js,jsx,ts,tsx,md,json,css}": [
-      "pnpm exec prettier --write",
+      "pnpm exec prettier --write"
+    ],
+    "*.{js,jsx,ts,tsx}": [
       "pnpm exec eslint --fix"
     ]
   }
