--- a/package.json
+++ b/package.json
@@ -33,7 +33,7 @@
     "@clerk/nextjs": "^6.0.0",
     "@google-cloud/storage": "^7.0.0",
     "@radix-ui/react-avatar": "^1.1.10",
-    "@radix-ui/react-dropdown-menu": "^2.2.6",
+    "@radix-ui/react-dropdown-menu": "^2.1.16",
     "@radix-ui/react-label": "^2.1.7",
     "@radix-ui/react-progress": "^1.1.7",
     "@radix-ui/react-select": "^2.2.6",
@@ -71,6 +71,7 @@
     "@commitlint/config-conventional": "^18.0.0",
     "@eslint/eslintrc": "^3.3.1",
     "@eslint/js": "^9.34.0",
+    "@next/eslint-plugin-next": "^15.5.0",
     "@playwright/test": "^1.40.0",
     "@tailwindcss/postcss": "^4.0.0",
     "@testing-library/jest-dom": "^6.8.0",
@@ -79,9 +80,9 @@
     "@types/node": "^20.0.0",
     "@types/react": "^18.0.0",
     "@types/react-dom": "^18.0.0",
-    "@typescript-eslint/eslint-plugin": "^6.21.0",
-    "@typescript-eslint/parser": "^6.21.0",
-    "eslint": "^8.57.1",
+    "@typescript-eslint/eslint-plugin": "^8.40.0",
+    "@typescript-eslint/parser": "^8.40.0",
+    "eslint": "^9.34.0",
     "eslint-config-next": "15.5.0",
     "eslint-plugin-jest": "^29.0.1",
     "eslint-plugin-next": "^0.0.0",
@@ -96,7 +97,7 @@
     "prettier-plugin-tailwindcss": "^0.5.0",
     "tailwindcss": "^4.0.0",
     "tailwindcss-animate": "^1.0.7",
-    "typescript": "^5.3.3",
+    "typescript": "^5.9.2",
     "typescript-eslint": "^8.40.0"
   },
   "engines": {
